--- a/toscatranslator/providers/kubernetes/tosca_elements_map_to_kubernetes.yaml
+++ b/toscatranslator/providers/kubernetes/tosca_elements_map_to_kubernetes.yaml
@@ -1,9 +1,15 @@
 tosca.nodes.Compute:
   attributes:
-    private_address: "kubernetes.nodes.Service.properties.spec.clusterIP"
+    private_address:
+      - parameter: "kubernetes.nodes.Service.properties.spec.clusterIP"
+        value: "{self[value]}"
+      - parameter: "kubernetes.nodes.Service.properties.metadata.name"
+        value: "{self[name]}-service"
     public_address:
       - parameter: "kubernetes.nodes.Service.properties.spec.externalIPs"
         value: ["{self[value]}"]
+      - parameter: "kubernetes.nodes.Service.properties.metadata.name"
+        value: "{self[name]}-service"
     networks:
       error: true
       reason: "networks not supported in Kubernetes"
@@ -33,51 +39,52 @@ tosca.nodes.Compute:
                     - parameter: memory
                       value: "{self[value]}"
     endpoint.properties:
-      - parameter: "kubernetes.nodes.Service.properties.spec.selector"
+      protocol:
+        parameter: "kubernetes.nodes.Service.properties.spec.ports"
         value:
-          app: "{self[name]}"
-      - protocol:
-          parameter: "kubernetes.nodes.Service.properties.spec.ports"
+          - parameter: protocol
+            value: "{self[value]}"
+      port:
+        - parameter: "kubernetes.nodes.Service.properties.spec.ports"
           value:
-            - parameter: protocol
+            - parameter: port
               value: "{self[value]}"
-        port:
-          - parameter: "kubernetes.nodes.Service.properties.spec.ports"
-            value:
-              - parameter: port
-                value: "{self[value]}"
-          - parameter: "kubernetes.nodes.Deployment.properties.spec.template.spec.containers"
-            value:
-              - parameter: ports
-                value:
-                  - parameter: containerPort
-                    value: "{self[value]}"
-        port_name:
-          - parameter: "kubernetes.nodes.Service.properties.spec.ports"
-            value:
-              - parameter: targetPort
-                value: "{self[value]}"
-          - parameter: "kubernetes.nodes.Deployment.properties.spec.template.spec.containers"
-            value:
-              - parameter: ports
-                value:
-                  - parameter: name
-                    value: "{self[value]}"
-        secure:
-          error: true
-          reason: "secure not supported in Kubernetes"
-        url_path:
-          error: true
-          reason: "url_path not supported in Kubernetes"
-        network_name:
-          error: true
-          reason: "network_name not supported in Kubernetes"
-        initiator:
-          error: true
-          reason: "initiator not supported in Kubernetes"
-        ports:
-          error: true
-          reason: "ports not supported in Kubernetes"
+        - parameter: "kubernetes.nodes.Service.properties.metadata.name"
+          value: "{self[name]}-service"
+      port_name:
+        - parameter: "kubernetes.nodes.Service.properties.spec.ports"
+          value:
+            - parameter: targetPort
+              value: "{self[value]}"
+        - parameter: "kubernetes.nodes.Deployment.properties.spec.template.spec.containers"
+          value:
+            - parameter: ports
+              value:
+                - parameter: name
+                  value: "{self[value]}"
+                - parameter: containerPort
+                  value: "{self[value]}"
+        - parameter: "kubernetes.nodes.Service.properties.spec.selector"
+          value:
+            app: "{self[name]}"
+        - parameter: "kubernetes.nodes.Deployment.properties.spec.selector.matchLabels"
+          value:
+            app: "{self[name]}"
+      secure:
+        error: true
+        reason: "secure not supported in Kubernetes"
+      url_path:
+        error: true
+        reason: "url_path not supported in Kubernetes"
+      network_name:
+        error: true
+        reason: "network_name not supported in Kubernetes"
+      initiator:
+        error: true
+        reason: "initiator not supported in Kubernetes"
+      ports:
+        error: true
+        reason: "ports not supported in Kubernetes"
     os.properties:
       - architecture:
           error: true
@@ -88,22 +95,19 @@ tosca.nodes.Compute:
         distribution:
           parameter: "{self[buffer][image]}"
           value: "{self[value]}"
-#        version:
-#          parameter: "{self[buffer][tag]}"
-#          value: ":{self[value]}"
+          #        version:
+          #          parameter: "{self[buffer][tag]}"
+          #          value: ":{self[value]}"
       - parameter: "kubernetes.nodes.Deployment.properties.spec.template.spec.containers"
         value:
           - parameter: image
             value: "{self[buffer][image]}"#{self[buffer][tag]}"
       - parameter: "kubernetes.nodes.Deployment.properties.metadata.name"
         value: "{self[name]}-deployment"
-      - parameter: "kubernetes.nodes.Deployment.properties.metadata.lables"
+      - parameter: "kubernetes.nodes.Deployment.properties.metadata.labels"
         value:
           app: "{self[name]}"
-      - parameter: "kubernetes.nodes.Deployment.properties.spec.selector.matchLabels"
-        value:
-          app: "{self[name]}"
-      - parameter: "kubernetes.nodes.Deployment.properties.spec.template.metadata.lables"
+      - parameter: "kubernetes.nodes.Deployment.properties.spec.template.metadata.labels"
         value:
           app: "{self[name]}"
       - parameter: "kubernetes.nodes.Deployment.properties.spec.template.spec.containers"
